Lab03/y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN func_insert scope_enter param_insert compound_statement
    7                | type_specifier func_name LPAREN RPAREN func_insert_no_params scope_enter compound_statement

    8 func_name: ID

    9 func_insert: /* empty */

   10 func_insert_no_params: /* empty */

   11 param_insert: /* empty */

   12 scope_enter: /* empty */

   13 parameter_list: parameter_list COMMA type_specifier ID
   14               | parameter_list COMMA type_specifier
   15               | type_specifier ID
   16               | type_specifier

   17 compound_statement: scope_enter LCURL statements RCURL
   18                   | scope_enter LCURL RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | func_definition
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | /* empty */

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 34 35
ELSE (259) 35
FOR (260) 33
WHILE (261) 36
DO (262)
BREAK (263)
INT (264) 20
CHAR (265)
FLOAT (266) 21
DOUBLE (267)
VOID (268) 22
RETURN (269) 38
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 37
ADDOP (275) 50 53
MULOP (276) 52
INCOP (277) 61
DECOP (278) 62
RELOP (279) 48
ASSIGNOP (280) 44
LOGICOP (281) 46
NOT (282) 54
LPAREN (283) 6 7 33 34 35 36 37 57 58
RPAREN (284) 6 7 33 34 35 36 37 57 58
LCURL (285) 17 18
RCURL (286) 17 18
LTHIRD (287) 24 26 42
RTHIRD (288) 24 26 42
COMMA (289) 13 14 23 24 65
SEMICOLON (290) 19 37 38 39 40
CONST_INT (291) 24 26 59
CONST_FLOAT (292) 60
ID (293) 8 13 15 23 24 25 26 37 41 42 57
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 6 7, on right: 5 30
func_name (45)
    on left: 8, on right: 6 7
func_insert (46)
    on left: 9, on right: 6
func_insert_no_params (47)
    on left: 10, on right: 7
param_insert (48)
    on left: 11, on right: 6
scope_enter (49)
    on left: 12, on right: 6 7 17 18
parameter_list (50)
    on left: 13 14 15 16, on right: 6 13 14
compound_statement (51)
    on left: 17 18, on right: 6 7 32
var_declaration (52)
    on left: 19, on right: 4 29
type_specifier (53)
    on left: 20 21 22, on right: 6 7 13 14 15 16 19
declaration_list (54)
    on left: 23 24 25 26, on right: 19 23 24
statements (55)
    on left: 27 28, on right: 17 28
statement (56)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 28 33 34 35
    36
expression_statement (57)
    on left: 39 40, on right: 31 33
variable (58)
    on left: 41 42, on right: 44 56 61 62
expression (59)
    on left: 43 44, on right: 33 34 35 36 38 40 42 58
logic_expression (60)
    on left: 45 46, on right: 43 44 65 66
rel_expression (61)
    on left: 47 48, on right: 45 46
simple_expression (62)
    on left: 49 50, on right: 47 48 50
term (63)
    on left: 51 52, on right: 49 50 52
unary_expression (64)
    on left: 53 54 55, on right: 51 52 53 54
factor (65)
    on left: 56 57 58 59 60 61 62, on right: 55
argument_list (66)
    on left: 63 64, on right: 57
arguments (67)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   20 type_specifier: INT .

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT .

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID .

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . func_name LPAREN parameter_list RPAREN func_insert scope_enter param_insert compound_statement
    7                | type_specifier . func_name LPAREN RPAREN func_insert_no_params scope_enter compound_statement
   19 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    func_name         go to state 13
    declaration_list  go to state 14


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    8 func_name: ID .
   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    LPAREN    reduce using rule 8 (func_name)
    $default  reduce using rule 25 (declaration_list)


State 13

    6 func_definition: type_specifier func_name . LPAREN parameter_list RPAREN func_insert scope_enter param_insert compound_statement
    7                | type_specifier func_name . LPAREN RPAREN func_insert_no_params scope_enter compound_statement

    LPAREN  shift, and go to state 16


State 14

   19 var_declaration: type_specifier declaration_list . SEMICOLON
   23 declaration_list: declaration_list . COMMA ID
   24                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

   26 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 19


State 16

    6 func_definition: type_specifier func_name LPAREN . parameter_list RPAREN func_insert scope_enter param_insert compound_statement
    7                | type_specifier func_name LPAREN . RPAREN func_insert_no_params scope_enter compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 20

    parameter_list  go to state 21
    type_specifier  go to state 22


State 17

   23 declaration_list: declaration_list COMMA . ID
   24                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   19 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 19 (var_declaration)


State 19

   26 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 24


State 20

    7 func_definition: type_specifier func_name LPAREN RPAREN . func_insert_no_params scope_enter compound_statement

    $default  reduce using rule 10 (func_insert_no_params)

    func_insert_no_params  go to state 25


State 21

    6 func_definition: type_specifier func_name LPAREN parameter_list . RPAREN func_insert scope_enter param_insert compound_statement
   13 parameter_list: parameter_list . COMMA type_specifier ID
   14               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 22

   15 parameter_list: type_specifier . ID
   16               | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 16 (parameter_list)


State 23

   23 declaration_list: declaration_list COMMA ID .
   24                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 23 (declaration_list)


State 24

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 25

    7 func_definition: type_specifier func_name LPAREN RPAREN func_insert_no_params . scope_enter compound_statement

    $default  reduce using rule 12 (scope_enter)

    scope_enter  go to state 30


State 26

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN . func_insert scope_enter param_insert compound_statement

    $default  reduce using rule 9 (func_insert)

    func_insert  go to state 31


State 27

   13 parameter_list: parameter_list COMMA . type_specifier ID
   14               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 32


State 28

   15 parameter_list: type_specifier ID .

    $default  reduce using rule 15 (parameter_list)


State 29

   24 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 33


State 30

    7 func_definition: type_specifier func_name LPAREN RPAREN func_insert_no_params scope_enter . compound_statement

    $default  reduce using rule 12 (scope_enter)

    scope_enter         go to state 34
    compound_statement  go to state 35


State 31

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN func_insert . scope_enter param_insert compound_statement

    $default  reduce using rule 12 (scope_enter)

    scope_enter  go to state 36


State 32

   13 parameter_list: parameter_list COMMA type_specifier . ID
   14               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 37

    $default  reduce using rule 14 (parameter_list)


State 33

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 38


State 34

   17 compound_statement: scope_enter . LCURL statements RCURL
   18                   | scope_enter . LCURL RCURL

    LCURL  shift, and go to state 39


State 35

    7 func_definition: type_specifier func_name LPAREN RPAREN func_insert_no_params scope_enter compound_statement .

    $default  reduce using rule 7 (func_definition)


State 36

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN func_insert scope_enter . param_insert compound_statement

    $default  reduce using rule 11 (param_insert)

    param_insert  go to state 40


State 37

   13 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 38

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 39

   17 compound_statement: scope_enter LCURL . statements RCURL
   18                   | scope_enter LCURL . RCURL

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    RCURL        shift, and go to state 49
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 12 (scope_enter)

    func_definition       go to state 54
    scope_enter           go to state 34
    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 9
    statements            go to state 57
    statement             go to state 58
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 40

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN func_insert scope_enter param_insert . compound_statement

    $default  reduce using rule 12 (scope_enter)

    scope_enter         go to state 34
    compound_statement  go to state 68


State 41

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 69


State 42

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 70


State 43

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 71


State 44

   38 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 72
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 45

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 73


State 46

   53 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 74
    unary_expression  go to state 75
    factor            go to state 67


State 47

   54 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 74
    unary_expression  go to state 76
    factor            go to state 67


State 48

   58 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 77
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 49

   18 compound_statement: scope_enter LCURL RCURL .

    $default  reduce using rule 18 (compound_statement)


State 50

   39 expression_statement: SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 51

   59 factor: CONST_INT .

    $default  reduce using rule 59 (factor)


State 52

   60 factor: CONST_FLOAT .

    $default  reduce using rule 60 (factor)


State 53

   41 variable: ID .
   42         | ID . LTHIRD expression RTHIRD
   57 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 78
    LTHIRD  shift, and go to state 79

    $default  reduce using rule 41 (variable)


State 54

   30 statement: func_definition .

    $default  reduce using rule 30 (statement)


State 55

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 56

   29 statement: var_declaration .

    $default  reduce using rule 29 (statement)


State 57

   17 compound_statement: scope_enter LCURL statements . RCURL
   28 statements: statements . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    RCURL        shift, and go to state 80
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 12 (scope_enter)

    func_definition       go to state 54
    scope_enter           go to state 34
    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 9
    statement             go to state 81
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 58

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 59

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 60

   44 expression: variable . ASSIGNOP logic_expression
   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP     shift, and go to state 82
    DECOP     shift, and go to state 83
    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 56 (factor)


State 61

   40 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 62

   43 expression: logic_expression .

    $default  reduce using rule 43 (expression)


State 63

   45 logic_expression: rel_expression .
   46                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 86

    $default  reduce using rule 45 (logic_expression)


State 64

   47 rel_expression: simple_expression .
   48               | simple_expression . RELOP simple_expression
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 87
    RELOP  shift, and go to state 88

    $default  reduce using rule 47 (rel_expression)


State 65

   49 simple_expression: term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 49 (simple_expression)


State 66

   51 term: unary_expression .

    $default  reduce using rule 51 (term)


State 67

   55 unary_expression: factor .

    $default  reduce using rule 55 (unary_expression)


State 68

    6 func_definition: type_specifier func_name LPAREN parameter_list RPAREN func_insert scope_enter param_insert compound_statement .

    $default  reduce using rule 6 (func_definition)


State 69

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 90
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 70

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    expression_statement  go to state 91
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 71

   36 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 92
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 72

   38 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 93


State 73

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 94


State 74

   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 82
    DECOP  shift, and go to state 83

    $default  reduce using rule 56 (factor)


State 75

   53 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 76

   54 unary_expression: NOT unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 77

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 95


State 78

   57 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 64 (argument_list)

    variable           go to state 74
    logic_expression   go to state 96
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67
    argument_list      go to state 97
    arguments          go to state 98


State 79

   42 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 99
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 80

   17 compound_statement: scope_enter LCURL statements RCURL .

    $default  reduce using rule 17 (compound_statement)


State 81

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 82

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 83

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 84

   44 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 74
    logic_expression   go to state 100
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 85

   40 expression_statement: expression SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 86

   46 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 74
    rel_expression     go to state 101
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 87

   50 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 74
    term              go to state 102
    unary_expression  go to state 66
    factor            go to state 67


State 88

   48 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 74
    simple_expression  go to state 103
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 89

   52 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 74
    unary_expression  go to state 104
    factor            go to state 67


State 90

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 105


State 91

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    expression_statement  go to state 106
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 92

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 107


State 93

   38 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 38 (statement)


State 94

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 108


State 95

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 96

   66 arguments: logic_expression .

    $default  reduce using rule 66 (arguments)


State 97

   57 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 109


State 98

   63 argument_list: arguments .
   65 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 110

    $default  reduce using rule 63 (argument_list)


State 99

   42 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 111


State 100

   44 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 44 (expression)


State 101

   46 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 46 (logic_expression)


State 102

   50 simple_expression: simple_expression ADDOP term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 50 (simple_expression)


State 103

   48 rel_expression: simple_expression RELOP simple_expression .
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 87

    $default  reduce using rule 48 (rel_expression)


State 104

   52 term: term MULOP unary_expression .

    $default  reduce using rule 52 (term)


State 105

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 12 (scope_enter)

    func_definition       go to state 54
    scope_enter           go to state 34
    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 9
    statement             go to state 112
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 106

   33 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 113
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 107

   36 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 12 (scope_enter)

    func_definition       go to state 54
    scope_enter           go to state 34
    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 9
    statement             go to state 114
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 108

   37 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 115


State 109

   57 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 57 (factor)


State 110

   65 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 74
    logic_expression   go to state 116
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 111

   42 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 42 (variable)


State 112

   34 statement: IF LPAREN expression RPAREN statement .
   35          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 117

    $default  reduce using rule 34 (statement)


State 113

   33 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 118


State 114

   36 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 36 (statement)


State 115

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 37 (statement)


State 116

   65 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 65 (arguments)


State 117

   35 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 12 (scope_enter)

    func_definition       go to state 54
    scope_enter           go to state 34
    compound_statement    go to state 55
    var_declaration       go to state 56
    type_specifier        go to state 9
    statement             go to state 119
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 118

   33 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
